package cn.thinkinjava.design.pattern.create.factory.abstractfactory.frame;

/**
 * 产品A接口角色
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public interface ProductA {
}
