package cn.thinkinjava.design.pattern.create.factory.abstractfactory.frame;

/**
 * 具体产品A实现2角色
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public class ProductA2 implements ProductA {

}
