package cn.thinkinjava.design.pattern.create.factory.abstractfactory.frame;

/**
 * 具体产品B实现1角色
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public class ProductB1 implements ProductB {

}
